--- a/config.json
+++ b/config.json
@@ -10,7 +10,7 @@
   "email": "Connor.Norris.Dev@gmail.com",
   "ps1_hostname": "The Hizzle Fo Shizzle",
   "ps1_username": "My_Homie",
-  "repo": "https://github.com/Cveinnt/LiveTerm",
+  "repo": "https://github.com/CDN5-Dev/PersonalPortfolio",
   "resume_url": "https://upload.wikimedia.org/wikipedia/commons/c/cc/Resume.pdf",
   "donate_urls": {
     "paypal": "https://paypal.me/cveinnt",
