--- a/config.json
+++ b/config.json
@@ -4,18 +4,14 @@
   "name": "Connor Norris",
   "ascii": "liveterm",
   "social": {
-    "github": "CDN5-Dev",
+    "github": "CDN5-dev",
     "linkedin": "connor-norris-dev"
   },
   "email": "Connor.Norris.Dev@gmail.com",
-  "ps1_hostname": "The Hizzle Fo Shizzle",
-  "ps1_username": "My_Homie",
-  "repo": "https://github.com/CDN5-Dev/PersonalPortfolio",
+  "ps1_hostname": "Portfolio",
+  "ps1_username": "Prompt",
+  "repo": "https://github.com/CDN5-Dev/Portfolio",
   "resume_url": "https://upload.wikimedia.org/wikipedia/commons/c/cc/Resume.pdf",
-  "donate_urls": {
-    "paypal": "https://paypal.me/cveinnt",
-    "patreon": "https://patreon.com/cveinnt"
-  },
   "colors": {
     "light": {
       "background": "#FBF1C9",
