Updated Github profile & repo locations

--- a/config.json
+++ b/config.json
@@ -10,7 +10,7 @@
   "email": "Connor.Norris.Dev@gmail.com",
   "ps1_hostname": "Portfolio",
   "ps1_username": "Prompt",
-  "repo": "https://github.com/CDN5-Dev/Portfolio",
+  "repo": "https://github.com/CDN5-dev/Portfolio",
   "resume_url": "https://upload.wikimedia.org/wikipedia/commons/c/cc/Resume.pdf",
   "colors": {
     "light": {
